SPCTR-2319 Countdown - Fixed broken Inner Alignmnet feature, reduced default label size

--- a/src/blocks/countdown/style.scss
+++ b/src/blocks/countdown/style.scss
@@ -26,7 +26,7 @@
 
 	&__label {
 		align-self: center;
-		font-size: 18px;
+		font-size: 14px;
 
 		@media (max-width: 976px) {
 			font-size: 12px;
